# detector-rdpbridge

./: .gitignore  ARCHITECTURE.md  CDP_PORT_9222_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG_CDP_FIX.md  DELIVERY_SUMMARY.txt  GETTING_STARTED.md  HOLD_MODE_IMPLEMENTATION.md  HOLD_MODE_TEST.md  HTTP_RESUME_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALL.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  START_HERE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  WATCHDOG_USAGE.md  activate.sh  check_weakref.py  example_playwright_script.py  example_usage.py  how e97550a8072ecc49b99babac9771bd0dbbdf4d50~1sitecustomize.py  sitecustomize_original.py  install.sh  miniagent_ws.py  playwright_watchdog.py  pyproject.toml  requirements.txt  run_verification.py  setup_env.bat  setup_env.ps1  setup_env.sh  sitecustomize.py  sitecustomize_original.py  (+13 more)
examples/: __init__.py  test_example_auto_plugin.py  test_example_context_manager.py  test_example_decorator.py
injectors/: pw_injector.js
injectors/pw_py_inject/: sitecustomize.py
pw_ws_reporter/: __init__.py  cli.py  pytest_plugin.py  reporter.py  ws_client.py
tests/: README.md  __init__.py  manual_verification_script.py  test_assertion_error.py  test_chromium_timeout.py  test_firefox_timeout.py  test_integration.py  test_locator_error_payload.py  test_multiple_errors.py  test_pytest_plugin.py  test_retry.py  test_schema.py  test_webkit_timeout.py  test_ws_client.py
windows/: install_watchdog_task.ps1  pw-run-pytest.ps1  pw-run.ps1
(+1 files in other folders)
