[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pw-ws-reporter"
version = "1.0.0"
description = "Playwright test failure reporter that notifies a Flutter app via WebSocket"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Playwright WS Reporter Team"}
]
dependencies = [
    "playwright>=1.40.0",
    "websockets>=12.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
pw-ws-reporter = "pw_ws_reporter.cli:cli"

[project.entry-points.pytest11]
pytest_playwright_ws_reporter = "pw_ws_reporter.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["pw_ws_reporter*"]

